objects/Live_Chat_Survey_Response__c.object
<CustomObject>
    <description>Case# 00615287 - This object will store survey response submitted by live chat visitor - Arokia Nathan</description>
    <fields>
        <fullName>Actual_Score__c</fullName>
        <description>Case 00628930 - Copied from Answer Score when survey is submitted. If a question has 5 answers with scores from 1 to 5 and if the answer with score 4 is selected then 4 is copied to this field - Arokia Nathan</description>
        <label>Actual Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <description>Case# 00615287 - This field will store snapshout of answer - Arokia Nathan</description>
        <label>Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChatKey__c</fullName>
        <description>Case# 00615287 - This field will store chat key of live chat session - Arokia Nathan</description>
        <label>ChatKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Chat_Transcript__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case# 00615287 - This field will refer to Live Chat Transcript record - Arokia Nathan</description>
        <label>Live Chat Transcript</label>
        <referenceTo>LiveChatTranscript</referenceTo>
        <relationshipLabel>Live Chat Survey Responses</relationshipLabel>
        <relationshipName>Live_Chat_Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Score__c</fullName>
        <description>Case 00628930 - Copied from Answer Score when survey is submitted. If a question has 5 answers with scores from 1 to 5 then 5 is copied to this field - Arokia Nathan</description>
        <label>Max Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Score__c</fullName>
        <description>Case 00628930 - Copied from Answer Score when survey is submitted. If a question has 5 answers with scores from 1 to 5 then 1 is copied to this field - Arokia Nathan</description>
        <label>Min Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Case# 00615287 - This field will store snapshot of question - Arokia Nathan</description>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Case# 00615287 - This field will store snapshot of sequence - Arokia Nathan</description>
        <label>Sequence#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <description>Case 00628924 - Copied from question Topic when survey is submitted - Arokia Nathan</description>
        <label>Topic</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Live Chat Survey Response</label>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>Live Chat Survey#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Live Chat Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>